  - Removed --enable-trace-cache configure option. The option will be always ON
    for any Bochs configuration.
  - Compile in MONITOR/MWAIT support by default for all cpu-level=6 configurations.
  - added support for MSVC DLL plugins with a separate workspace package.
    VS2008Ex can now create a BOCHS.EXE with a set of plugin DLLs.
    TODO: nmake still cannot create plugin DLLs.

- I/O Devices
  - Networking
    - new networking module 'slirp' (user mode networking using Slirp and a
      builtin DHCP server)
  - Hard drive / cdrom
    - fixed buffer overflow causing Bochs crash in LBA48 mode
    - implemented ATA commands "READ NATIVE MAX ADDRESS" and
      "READ NATIVE MAX ADDRESS EXT"
  - Sound
    - ported ES1370 soundcard emulation from Qemu, to enable configure with
      the option --enable-es1370
    - sound input implemented in the sound lowlevel modules for Windows and
      Linux (ALSA / OSS)
  - PCI
    - added framework for PCI ROM support
  - VGA
    - added PCI ROM support to cirrus and pcivga and moved ROM loading for the ISA
      case to the vga code (SeaBIOS now usable by Bochs)
    - log prefix now depends on the selected extension (new prefix BXVGA for
      Bochs VBE support)

  - LGPL'd VGABIOS updated to current CVS
    - fixed DAC palette in 8 bpp VBE and Cirrus modes (using the same palette
      as VGA mode 0x13)
    - VBE: added HDTV resolutions (patch by Tristan Schmelcher)
    - VBE: added PCI ROM signature and data structure

  - ROM BIOS
    - Report memory above 4GB to BIOS (patch by Sebastian Herbszt)
    - added PCI ROM init code for BIOS-bochs-latest
      (WARNING: legacy BIOS no longer works with a PCI display adapter)

- GUI and display libraries
  - vga update interval now uses host timing if the realtime synchronization
    is enabled with the "clock" option (FIXME: it should always be used -
    independent from the "clock" setting)
  - Implemented graphics mode snapshot for VBE, Cirrus and standard VGA modes.